--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="color">#040448</color>
+    <color name="tarjeta_color">#054960</color>
+    <color name="color_img">#ffffff</color>
 </resources>
