--- a/app/src/main/res/layout/plantilla_lista_producto.xml
+++ b/app/src/main/res/layout/plantilla_lista_producto.xml
@@ -23,15 +23,17 @@
         android:text="Cantidad:"
         android:textColor="@color/color_img"
         android:layout_marginTop="60dp"
-        android:layout_marginLeft="160dp"/>
+        android:layout_marginLeft="160dp"
+        android:textSize="@dimen/tamaño_letra_nombres"/>
     <TextView
         android:id="@+id/txv_precio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Precios:"
         android:textColor="@color/color_img"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="270dp"/>
+        android:layout_marginTop="43dp"
+        android:layout_marginLeft="270dp"
+        android:textSize="@dimen/tamaño_letra_nombres"/>
 
     <TextView
         android:id="@+id/txv_nombre"
@@ -40,6 +42,8 @@
         android:layout_marginLeft="160dp"
         android:layout_marginTop="20dp"
         android:text="Nombre:"
-        android:textColor="@color/color_img" />
+        android:textColor="@color/color_img"
+        android:textSize="@dimen/tamaño_letra_nombre"
+        android:textStyle="bold"/>
 </android.support.v7.widget.CardView>
 </RelativeLayout>
