--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -5,5 +5,50 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.senasoft.comprandys2.vista.Registro">
+<EditText
+    android:id="@+id/edt_nombre_producto"
+    android:layout_width="200dp"
+    android:layout_height="50dp"
+    android:layout_centerHorizontal="true"
+    android:layout_marginTop="20dp"
+    android:textStyle="bold"
+    android:textColorHighlight="@color/color"
+    android:hint="Nombre De Producto"
+    android:inputType="text"/>
+    <EditText
+        android:id="@+id/edt_cantidad"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="80dp"
+        android:layout_centerHorizontal="true"
+        android:textStyle="bold"
+        android:hint="              Cantidad"
+        android:textColorHighlight="@color/color"
+        android:inputType="number"/>
+    <EditText
+        android:id="@+id/edt_precio"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="140dp"
+        android:layout_centerHorizontal="true"
+        android:inputType="number"
+        android:hint="                Precio"
+        android:textStyle="bold"
+        android:textColorHighlight="@color/color"/>
+    <TextView
+        android:id="@+id/txv_foto"
+        android:layout_width="150dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="210dp"
+        android:layout_marginLeft="90dp"
+        android:text="Foto"
+        android:textSize="@dimen/tamaño_letra_nombre"/>
 
+    <ImageButton
+        android:id="@+id/img_camara"
+        android:layout_width="55dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="240dp"
+        android:layout_marginTop="210dp"
+        app:srcCompat="@drawable/ic_menu_camera" />
 </RelativeLayout>
