--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -51,4 +51,11 @@
         android:layout_marginLeft="240dp"
         android:layout_marginTop="210dp"
         app:srcCompat="@drawable/ic_menu_camera" />
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="280dp"
+        app:srcCompat="@mipmap/ic_logo" />
 </RelativeLayout>
