--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -54,8 +54,15 @@
 
     <ImageView
         android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_height="130dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="280dp"
         app:srcCompat="@mipmap/ic_logo" />
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:text="Registrarse"
+        android:layout_marginTop="430dp"
+        android:layout_marginLeft="200dp"
+        android:textColor="@color/color" />
 </RelativeLayout>
