--- a/app/src/main/res/drawable/selector_botones.xml
+++ b/app/src/main/res/drawable/selector_botones.xml
@@ -6,7 +6,7 @@
     <!--para que las esquinas del boton sean curvas -->
     <corners android:radius="15dp"/>
     <!--agregar borde del boton, color y grosor del borde -->
-    <stroke android:color="@color/colorAccent"
+    <stroke android:color="@color/color"
             android:width="5dp"/>
 
 </shape>
@@ -18,7 +18,7 @@
         <!--para que las esquiinas del boton sean curvas-->
         <corners android:radius="15dp" />
         <!--agregar borde al boton, color y grosor del borde-->
-        <stroke android:color="@color/colorAccent"
+        <stroke android:color="@color/color"
             android:width="8dp"/>
     </shape>
     </item>
