--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,15 +3,15 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/registro"
             android:icon="@mipmap/icon"
             android:title="Registro" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/salir"
             android:icon="@mipmap/salir"
             android:title="Salir" />
         <item
-            android:id="@+id/nav_listado"
+            android:id="@+id/ver"
             android:icon="@android:drawable/ic_menu_sort_by_size"
             android:title="Ver listado" />
 
