--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -50,7 +50,7 @@
         android:layout_height="40dp"
         android:layout_marginLeft="240dp"
         android:layout_marginTop="210dp"
-        android:onClick="onActivityResult"
+        android:onClick="irFoto"
         app:srcCompat="@drawable/ic_menu_camera" />
 
     <ImageView
